--- a/bento-grid-main/styles.css
+++ b/bento-grid-main/styles.css
@@ -243,4 +243,52 @@ body{
         'box1'
         'box4';
     }
+    
+    .grid-container .item:nth-child(4)
+    .grid-container .item:nth-child(5)
+    .grid-container .item:nth-child(6)
+    .grid-container .item:nth-child(7) {
+        text-align: left;
+    }
+
+    .grid-container .item:nth-child(1) {
+        padding: 2rem;
+        text-align: left;
+    }
+
+    .grid-container .item:nth-child(1) .lg-text {
+        font-size: 2.5rem;
+    }
+
+    .grid-container .item:nth-child(1) img {
+        width: 250px;
+    }
+
+    .grid-container .item:nth-child(3) {
+        padding: 2.75rem 1rem 2.5rem 1rem;
+    }
+
+    .grid-container .item:nth-child(3) .lg-text {
+        font-size: 2.25rem;
+    }
+
+    .grid-container .item:nth-child(3) img {
+        margin: 1rem 0; 
+        position: initial;
+        height: initial;
+    }
+
+    .grid-container .item:nth-child(5) {
+        margin-top: 10rem;
+    }
+
+    .grid-container .item:nth-child(8) {
+        padding: 1.5rem 4rem;
+    }
+}
+
+@media (max-width: 540px) {
+    .grid-container .item:nth-child(5) p {
+        margin-top: 6rem;
+    }
 }
